--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <main>
         <!-- top players and top blog section start-->
         <section class="container">
+            <!-- top players start -->
             <div class="top-players">
                 <h2 class="section-title">Top Players</h2>
                 <div class="players">
@@ -50,8 +51,75 @@
                 </div>
             </div>
             <hr>
+            <!-- top players end -->
+            <!-- top blogs start -->
+            <div class="top-blogs">
+                <h2 class="section-title">
+                    Top Blog
+                </h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                13 of My Favorite
+                                UI/UX Goodies
+                            </h3>
+                            <p class="blog-author">
+                                By <a href="">Danny Sapio</a>
+                            </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                13 of My Favorite
+                                UI/UX Goodies
+                            </h3>
+                            <p class="blog-author">
+                                By <a href="">Danny Sapio</a>
+                            </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                13 of My Favorite
+                                UI/UX Goodies
+                            </h3>
+                            <p class="blog-author">
+                                By <a href="">Danny Sapio</a>
+                            </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                13 of My Favorite
+                                UI/UX Goodies
+                            </h3>
+                            <p class="blog-author">
+                                By <a href="">Danny Sapio</a>
+                            </p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+            <!-- top blogs end -->
         </section>
         <!-- top players and top blog section end -->
+
     </main>
 </body>
 
